<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cdebf2"
    tools:context="com.example.nikhi.calculator.secAct">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/txt1"
        android:layout_below="@+id/txt1"
        android:background="#7678e7"
        android:text="@string/_7"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/txt1"
        android:layout_toEndOf="@+id/button2"
        android:background="#7678e7"
        android:text="@string/_8"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/txt1"
        android:layout_toEndOf="@+id/button3"
        android:background="#7678e7"
        android:text="@string/_9"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:background="#7678e7"
        android:text="@string/_4"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/button3"
        android:layout_toEndOf="@+id/button2"
        android:background="#7678e7"
        android:text="@string/_5"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/button4"
        android:layout_toEndOf="@+id/button3"
        android:background="#7678e7"
        android:text="@string/_6"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button5"
        android:background="#7678e7"
        android:text="@string/_1"
        android:textSize="40sp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:background=" #7678e7"
        android:text="@string/_2"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/button7"
        android:layout_toEndOf="@+id/button6"
        android:background="#7678e7"
        android:text="@string/_3"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:background="#7678e7"
        android:text="@string/_0"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/button10"
        android:layout_below="@+id/button10"
        android:background="#7678e7"
        android:text="@string/eq"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="110dp"
        android:layout_height="62dp"
        android:layout_below="@+id/txt1"
        android:layout_toEndOf="@+id/button4"
        android:background="#031a6e"
        android:text="@string/ac"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="110dp"
        android:layout_height="64dp"
        android:layout_below="@+id/button13"
        android:layout_toEndOf="@+id/button4"
        android:background="#031a6e"
        android:text="@string/plus"
        android:textColor="#ffffff"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="110dp"
        android:layout_height="64dp"
        android:layout_below="@+id/button14"
        android:layout_toEndOf="@+id/button7"
        android:background="#031a6e"
        android:text="@string/minus"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="110dp"
        android:layout_height="64dp"
        android:layout_below="@+id/button15"
        android:layout_toEndOf="@+id/button10"
        android:background="#031a6e"
        android:text="@string/mul"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="110dp"
        android:layout_height="66dp"
        android:layout_below="@+id/button16"
        android:layout_toEndOf="@+id/button12"
        android:background="#031a6e"
        android:text="@string/div"
        android:textColor="#ffffff"
        android:textSize="38sp" />


    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/button8"
        android:layout_below="@+id/button8"
        android:background="#7678e7"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:text="@string/decimal" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="number"
        android:textColor="#ffffff"
        android:textSize="40sp" />


</RelativeLayout>
